# Graphics

./: CMakeCache.txt  CMakeLists.txt  Makefile  basic.cpp  camera.cpp  cmake_install.cmake  fun.py  home.cpp  main  main.cpp  objReader.cpp  objreader.cpp  plyReader.cpp  shape.cpp  simplify  simplify.cpp
